--- a/sample/sample02.html
+++ b/sample/sample02.html
@@ -17,15 +17,16 @@
     <div class="wrapper">
       
       <header>
-        <h1>site name</h1>
+        <h1>my emotional
+        </h1>
         <div id="wave"></div>
         <div id="line"></div>
       </header>
 
       <div id="back">
-        <div id="backimg01" class="backimg"><img src="./images/back01.jpg" alt=""></div>
-        <div id="backimg02" class="backimg"><img src="./images/back02.jpg" alt=""></div>
-        <div id="backimg03" class="backimg"><img src="./images/back03.jpg" alt=""></div>
+        <div id="backimg01" class="backimg"><img src="./images/suimen.jpg" alt=""></div>
+        <div id="backimg02" class="backimg"><img src="./images/minamo.jpg" alt=""></div>
+        <div id="backimg03" class="backimg"><img src="./images/hana.jpg" alt=""></div>
       </div>
 
       <ul id="menu">
