--- a/sample/sample02.html
+++ b/sample/sample02.html
@@ -30,21 +30,15 @@
       </div>
 
       <ul id="menu">
-        <li id="btn01">MENU1</li>
-        <li id="btn02">MENU2</li>
-        <li id="btn03">MENU3</li>
+        <li id="btn01">HER1</li>
+        <li id="btn02">HER2</li>
+        <li id="btn03">HER3</li>
       </ul>
 
       <div id="content">
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
-        <div class="set"></div>
+        <div class="set"><img src="./images/okujyou.jpeg" alt=""></div>
+        <div class="set"><img src="./images/nekoakari.jpeg" alt=""></div>
+        <div class="set"><img src="./images/mitumeru.jpeg" alt=""></div>
       </div>
 
       
