--- a/sample/sample02.html
+++ b/sample/sample02.html
@@ -36,9 +36,28 @@
       </ul>
 
       <div id="content">
-        <div class="set"><img src="./images/okujyou.jpeg" alt=""></div>
+
         <div class="set"><img src="./images/nekoakari.jpeg" alt=""></div>
-        <div class="set"><img src="./images/mitumeru.jpeg" alt=""></div>
+        <div class="set"><img src="./images/yasinn.jpeg" alt=""></div>
+        <div class="set"><img src="./images/mitumeru.jpeg" alt="">
+          <div class="each_work">
+            <div id="img01" class="img_button"><img src="./images/okujyou.jpeg"></div>
+            <div id="content01" class="content">
+              <div class="txt_img">
+                
+                <div class="txt">
+                  <h2>ぐるぐるぐるぐる</h2>
+                  <div>
+                    <p>
+                      ？</p>
+                    <p>
+                      2020.10.24
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="close_button">閉じちゃう</div>
+            </div></div>
       </div>
 
       
