--- a/sample/sample02.html
+++ b/sample/sample02.html
@@ -38,7 +38,7 @@
       <div id="content">
 
         <div class="set"><img src="./images/nekoakari.jpeg" alt=""></div>
-        <div class="set"><img src="./images/yasinn.jpeg" alt=""></div>
+        <div class="set"><img src="./images/ya.jpeg" alt=""></div>
         <div class="set"><img src="./images/mitumeru.jpeg" alt="">
           <div class="each_work">
             <div id="img01" class="img_button"><img src="./images/okujyou.jpeg"></div>
@@ -49,7 +49,8 @@
                   <h2>ぐるぐるぐるぐる</h2>
                   <div>
                     <p>
-                      ？</p>
+                      ？
+                    </p>
                     <p>
                       2020.10.24
                     </p>
