--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -16,28 +16,15 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1>site name</h1>
-        <ul>
-          <li>menu1</li>
-          <li>menu2</li>
-          <li>menu3</li>
-        </ul>
-      </header>
 
       <div id="contents">
-        <div id="back"></div>
-        <div id="person"><img src="./images/person.png" alt=""></div>
-        <div id="car"><img src="./images/car.png" alt=""></div>
-        <div id="food"><img src="./images/food.png" alt=""></div>
+        <div id="back"><img src="./images/white.png" alt=""></div>
+        <div id="food"><img src="./images/tawasi.jpg" alt=""></div>
       </div>
 
-      <footer>
-        this is sample
-      </footer>
 
       <div id="intro">
-        <p>ここは宇宙</p>
+        <p>たわし</p>
       </div>
 
 
