--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>サンプル</h1>
 
   <ul>
-    <li><a href="./sample/sample01.html">サンプル1</a></li>
+    <li><a href="./sample/sample01.html">tawasi</a></li>
     <li><a href="./sample/sample02.html">my emotional</a></li>
     <li><a href="./sample/sample03.html">サンプル3</a></li>
     <li><a href="./sample/sample04.html">サンプル4</a></li>
