--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./css/style01.css" />
     <!-- 自分のjs -->
     <script src="./js/script01.js"></script>
-    <title>sample01</title>
+    <title>ハズレ/たわし
+    </title>
   </head>
   <body>
     <div class="wrapper">
